Fixed cards overflowing on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,8 @@
   opacity: 0.8;
   background-image: radial-gradient(#00c292 0.5px, #f9f9fd 0.5px);
   background-size: 10px 10px;
+  width: 100%;
+  height: 100%;
 }
 
 @layer base {
